Guards: one answer to what nothing is, and an address that names a place
First round of the class-by-class pass over this branch, on the leaf everything
else now depends on. The spec was written as what these six ought to be rather than
as what they do, and it came up red four times over two passes -- the second pass
because the seventh question was answered "no" the first time, and a class that is
not exemplary does not get left behind.

What nothing is. Java offers two answers and neither is right: String.isBlank asks
Character.isWhitespace, which counts an en space and misses the non-breaking one --
and the non-breaking one is exactly what a rich editor leaves when somebody empties
a field. A regex of \s is worse: in java that is seven ASCII characters, so an
ideographic space passes as text. The question is asked of every code point now, and
anything that shows nothing -- a space of any width, a zero width space, a byte
order mark, a soft hyphen, a control character -- is nothing when it is all there
is, and is somebody's meaning when it stands between two visible things.

Worse than the letter of it: the kit already knew. The markdown of somebody else's
article treated a line of a non-breaking space as empty, while a caption a
programmer wrote did not -- the looser rule for what is written by hand and the
stricter one for data, which is this project's rule upside down. One answer now, in
Guards.isNothing, and everyone asks it there: the markdown block, the renderer, the
walk. Md.of(a field somebody emptied) shows its empty state instead of an empty box,
which is the case the empty state exists for and the one it was missing.

Addresses. "https://" passed as absolute -- a scheme is not an address, and the page
would have handed a crawler a link to nowhere while looking exactly like a page that
had one. And an address that leaves the page carried spaces: whoever reads an og:url
is not a browser and will not guess where the address ended. An address that stays
on 